cabal-version:      3.0
name:               ge0math
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-simplifiable-class-constraints

executable ge0math
    import:           warnings
    main-is:          Main.hs
    other-modules:    Types
                    , DB
                    , App
                    , Lenses
    default-extensions: TemplateHaskell
                    , QuasiQuotes
                    , BlockArguments
                    , RecordWildCards
                    , DerivingStrategies
                    , AllowAmbiguousTypes
    build-depends:    base ^>=4.17.0.0
                    , template-haskell
                    , happstack-server
                    , happstack-hsp
                    , hsp
                    , hsx2hs
                    , text
                    , password
                    , mtl
                    , containers
                    , lens
                    , directory
                    , time
    hs-source-dirs:   app
    default-language: GHC2021
