cabal-version:      3.0
name:               ge0math
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-simplifiable-class-constraints -Wno-partial-type-signatures -Wno-name-shadowing

executable ge0math
    import:           warnings
    main-is:          Main.hs
    other-modules:    Types
                    , DB
                    , App
                    , Lenses
                    , Imports
                    , Pages.Auth
                    , Pages.Navigation
                    , Pages.Pool
    default-extensions: TemplateHaskell
                    , QuasiQuotes
                    , BlockArguments
                    , RecordWildCards
                    , DerivingStrategies
                    , AllowAmbiguousTypes
                    , PartialTypeSignatures
                    , NoImplicitPrelude
    build-depends:    base ^>=4.17.0.0
                    , template-haskell
                    , happstack-server
                    , happstack-hsp
                    , hsp
                    , hsx2hs
                    , aeson
                    , bytestring
                    , text
                    , password
                    , mtl
                    , containers
                    , lens
                    , directory
                    , time
                    , with-utf8
                    , random
    hs-source-dirs:   app
    default-language: GHC2021
